--- a/styles/style.css
+++ b/styles/style.css
@@ -16,3 +16,10 @@ li {
 body {
   font-family: "Poppins", sans-serif;
 }
+
+/* common sytles  */
+.background-gradient {
+  background-image: linear-gradient(90deg, #2937f0, #9f1ae2);
+}
+
+/* header section  */
