--- a/styles/style.css
+++ b/styles/style.css
@@ -21,5 +21,18 @@ body {
 .background-gradient {
   background-image: linear-gradient(90deg, #2937f0, #9f1ae2);
 }
+.text-blue {
+  color: #2937f0;
+}
+.text-purple {
+  color: #9f1ae2;
+}
 
-/* header section  */
+/* header section styles */
+header {
+  height: 80px;
+}
+/* banner section styles */
+.banner {
+  height: calc(100vh - 80px);
+}
